--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: CI
 
-
 on:
   pull_request:
     branches: [ main ]
@@ -30,7 +29,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      
+     
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -38,20 +37,23 @@ jobs:
 
       
       - name: Install dependencies
+        working-directory: backend/storix
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      
+        
       - name: Configure DATABASE_URL
         run: echo "DATABASE_URL=postgres://postgres:postgres@localhost:5432/test_db" >> $GITHUB_ENV
 
       
       - name: Run migrations
+        working-directory: backend/storix
         run: python manage.py migrate --noinput
 
       
       - name: Run tests with coverage
+        working-directory: backend/storix
         run: |
           coverage run -m pytest
           coverage xml -o coverage.xml
