--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
       
       - name: Install dependencies
-        working-directory: backend/storix
+        working-directory: backend/Storix
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
@@ -48,12 +48,12 @@ jobs:
 
       
       - name: Run migrations
-        working-directory: backend/storix
+        working-directory: backend/Storix
         run: python manage.py migrate --noinput
 
       
       - name: Run tests with coverage
-        working-directory: backend/storix
+        working-directory: backend/Storix
         run: |
           coverage run -m pytest
           coverage xml -o coverage.xml
