--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,9 @@ jobs:
         working-directory: backend/Storix
         run: python manage.py migrate --noinput
 
+      - name: Install coverage tool
+        run: pip install coverage
+
       
       - name: Run tests with coverage
         working-directory: backend/Storix
