--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,8 +54,9 @@ jobs:
         working-directory: backend/Storix
         run: python manage.py migrate --noinput
 
-      - name: Install coverage tool
-        run: pip install coverage
+       - name: Install coverage tool
+        run: |
+          python -m pip install coverage
 
       
       - name: Run tests with coverage
