--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,40 +25,33 @@ jobs:
           --health-retries 5
 
     steps:
-      
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y libzbar0
 
-     
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      
       - name: Install dependencies
         working-directory: backend/Storix
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-        
       - name: Configure DATABASE_URL
         run: echo "DATABASE_URL=postgres://postgres:postgres@localhost:5432/test_db" >> $GITHUB_ENV
 
-      
       - name: Run migrations
         working-directory: backend/Storix
         run: python manage.py migrate --noinput
 
-       - name: Install coverage tool
-        run: |
-          python -m pip install coverage
+      - name: Install coverage tool
+        run: python -m pip install coverage
 
-      
       - name: Run tests with coverage
         working-directory: backend/Storix
         run: |
@@ -66,7 +59,6 @@ jobs:
           coverage xml -o coverage.xml
           coverage report
 
-      
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
