--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Run tests with coverage
         working-directory: backend/Storix
         run: |
-          coverage run -m pytest
+          coverage run --source=. manage.py test --verbosity=2
           coverage xml -o coverage.xml
           coverage report
 
