--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,12 +52,10 @@ jobs:
       - name: Install coverage tool
         run: python -m pip install coverage
 
-      - name: Run tests with pytest & coverage
+      - name: Run tests with coverage
         working-directory: backend/Storix
-        env:
-          DJANGO_SETTINGS_MODULE: Storix.settings
         run: |
-          coverage run -m pytest
+          coverage run --source=. manage.py test accounts inventory --verbosity=2
           coverage xml -o coverage.xml
           coverage report
 
