--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,10 @@ jobs:
       - name: Install coverage tool
         run: python -m pip install coverage
 
-      - name: Run tests with coverage
+       - name: Run tests with coverage
         working-directory: backend/Storix
         run: |
-          coverage run --source=. manage.py test --verbosity=2
+          coverage run --source=. manage.py test accounts.tests inventory.tests --verbosity=2
           coverage xml -o coverage.xml
           coverage report
 
