--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,9 +55,10 @@ jobs:
       - name: Run tests with coverage
         working-directory: backend/Storix
         run: |
-          coverage run --source=accounts,invent​ory,Storix manage.py test --verbosity=2
-          coverage xml -o coverage.xml
-          coverage report
+              coverage run --source=accounts,inventory,Storix manage.py test accounts inventory --verbosity=2
+              coverage xml -o coverage.xml
+              coverage report
+
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
