--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,11 @@ jobs:
 
       - name: Configure DATABASE_URL
         run: echo "DATABASE_URL=postgres://postgres:postgres@localhost:5432/test_db" >> $GITHUB_ENV
+      
+       -name: Set Django SECRET_KEY and DEBUG
+        run: |
+          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> $GITHUB_ENV
+          echo "DEBUG=false"                   >> $GITHUB_ENV
 
       - name: Run migrations
         working-directory: backend/Storix
