--- a/backend/Storix/Dockerfile
+++ b/backend/Storix/Dockerfile
@@ -1,22 +1,17 @@
 FROM python:3.11-slim
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends libzbar0 build-essential \
-    && rm -rf /var/lib/apt/lists/*
-
+ && apt-get install -y --no-install-recommends libzbar0 build-essential \
+ && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-
 COPY requirements.txt .
 RUN pip install --upgrade pip \
-    && pip install --no-cache-dir -r requirements.txt
+ && pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-
-RUN python manage.py collectstatic --noinput
-
 EXPOSE 8000
 
-CMD ["gunicorn", "Storix.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["sh", "-c", "python manage.py migrate --noinput && python manage.py collectstatic --noinput && gunicorn Storix.wsgi:application --bind 0.0.0.0:8000"]
