--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,11 @@ jobs:
       postgres:
         image: postgres:14
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: test_db
+          POSTGRES_USER: newuser
+          POSTGRES_PASSWORD: 12345678
+          POSTGRES_DB: newdb
         ports: [ "5432:5432" ]
+
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
